# herald

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  MEMORY.md  README.md  SOUL.md  __main__.py  activity.py  agent_runner.py  bot.py  compose.yaml  config.py  deploy.py  docker-entrypoint.sh  herald-watchdog.service  mkdocs.yml  pyproject.toml  scheduler.py  task_queue.py
.github/workflows/: docs.yml
.herald/: MEMORY.md
.herald/humans/: keith.md
blog/: 2026-02-28-introducing-herald.md
caddy/: Caddyfile.example
docs/: agent-pattern.md  getting-started.md  index.md  roadmap.md  spec.md
docs/blog/: .authors.yml
docs/blog/posts/: 2026-02-28-introducing-herald.md  2026-03-02-march-update.md
herald/: __init__.py  __main__.py  activity.py  agent_runner.py  autonomy.py  bot.py  config.py  deploy.py  git_ops.py  scheduler.py  task_queue.py
projects/: example.yaml
scripts/: preflight.py
templates/: CLAUDE.md  MEMORY.md  README.md  SOUL.md
templates/open_source/: CLAUDE.md
templates/poc/: CLAUDE.md
tests/: conftest.py  test_autonomy.py  test_config.py  test_queue.py
